--- a/NLP Model  - ICD v1 96%.ipynb
+++ b/NLP Model  - ICD v1 96%.ipynb
@@ -110,262 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "endangered-uncertainty",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ROW_ID</th>\n",
-       "      <th>SUBJECT_ID</th>\n",
-       "      <th>HADM_ID</th>\n",
-       "      <th>COSTCENTER</th>\n",
-       "      <th>CHARTDATE</th>\n",
-       "      <th>CPT_CD</th>\n",
-       "      <th>CPT_NUMBER</th>\n",
-       "      <th>CPT_SUFFIX</th>\n",
-       "      <th>TICKET_ID_SEQ</th>\n",
-       "      <th>SECTIONHEADER</th>\n",
-       "      <th>SUBSECTIONHEADER</th>\n",
-       "      <th>DESCRIPTION</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>317</td>\n",
-       "      <td>11743</td>\n",
-       "      <td>129545</td>\n",
-       "      <td>ICU</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>99232</td>\n",
-       "      <td>99232.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>Evaluation and management</td>\n",
-       "      <td>Hospital inpatient services</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>318</td>\n",
-       "      <td>11743</td>\n",
-       "      <td>129545</td>\n",
-       "      <td>ICU</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>99232</td>\n",
-       "      <td>99232.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Evaluation and management</td>\n",
-       "      <td>Hospital inpatient services</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>319</td>\n",
-       "      <td>11743</td>\n",
-       "      <td>129545</td>\n",
-       "      <td>ICU</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>99232</td>\n",
-       "      <td>99232.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>Evaluation and management</td>\n",
-       "      <td>Hospital inpatient services</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>320</td>\n",
-       "      <td>11743</td>\n",
-       "      <td>129545</td>\n",
-       "      <td>ICU</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>99232</td>\n",
-       "      <td>99232.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>Evaluation and management</td>\n",
-       "      <td>Hospital inpatient services</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>321</td>\n",
-       "      <td>6185</td>\n",
-       "      <td>183725</td>\n",
-       "      <td>ICU</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>99223</td>\n",
-       "      <td>99223.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Evaluation and management</td>\n",
-       "      <td>Hospital inpatient services</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>573141</th>\n",
-       "      <td>573142</td>\n",
-       "      <td>78876</td>\n",
-       "      <td>163404</td>\n",
-       "      <td>Resp</td>\n",
-       "      <td>2105-09-01 00:00:00</td>\n",
-       "      <td>94003</td>\n",
-       "      <td>94003.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Medicine</td>\n",
-       "      <td>Pulmonary</td>\n",
-       "      <td>VENT MGMT;SUBSQ DAYS(INVASIVE)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>573142</th>\n",
-       "      <td>573143</td>\n",
-       "      <td>78879</td>\n",
-       "      <td>136071</td>\n",
-       "      <td>Resp</td>\n",
-       "      <td>2150-08-29 00:00:00</td>\n",
-       "      <td>94003</td>\n",
-       "      <td>94003.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Medicine</td>\n",
-       "      <td>Pulmonary</td>\n",
-       "      <td>VENT MGMT;SUBSQ DAYS(INVASIVE)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>573143</th>\n",
-       "      <td>573144</td>\n",
-       "      <td>78879</td>\n",
-       "      <td>136071</td>\n",
-       "      <td>Resp</td>\n",
-       "      <td>2150-08-28 00:00:00</td>\n",
-       "      <td>94002</td>\n",
-       "      <td>94002.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Medicine</td>\n",
-       "      <td>Pulmonary</td>\n",
-       "      <td>VENT MGMT, 1ST DAY (INVASIVE)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>573144</th>\n",
-       "      <td>573145</td>\n",
-       "      <td>78892</td>\n",
-       "      <td>175171</td>\n",
-       "      <td>Resp</td>\n",
-       "      <td>2125-06-11 00:00:00</td>\n",
-       "      <td>94003</td>\n",
-       "      <td>94003.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Medicine</td>\n",
-       "      <td>Pulmonary</td>\n",
-       "      <td>VENT MGMT;SUBSQ DAYS(INVASIVE)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>573145</th>\n",
-       "      <td>573146</td>\n",
-       "      <td>78892</td>\n",
-       "      <td>175171</td>\n",
-       "      <td>Resp</td>\n",
-       "      <td>2125-06-10 00:00:00</td>\n",
-       "      <td>94003</td>\n",
-       "      <td>94003.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Medicine</td>\n",
-       "      <td>Pulmonary</td>\n",
-       "      <td>VENT MGMT;SUBSQ DAYS(INVASIVE)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>573146 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        ROW_ID  SUBJECT_ID  HADM_ID COSTCENTER            CHARTDATE CPT_CD  \\\n",
-       "0          317       11743   129545        ICU                  NaN  99232   \n",
-       "1          318       11743   129545        ICU                  NaN  99232   \n",
-       "2          319       11743   129545        ICU                  NaN  99232   \n",
-       "3          320       11743   129545        ICU                  NaN  99232   \n",
-       "4          321        6185   183725        ICU                  NaN  99223   \n",
-       "...        ...         ...      ...        ...                  ...    ...   \n",
-       "573141  573142       78876   163404       Resp  2105-09-01 00:00:00  94003   \n",
-       "573142  573143       78879   136071       Resp  2150-08-29 00:00:00  94003   \n",
-       "573143  573144       78879   136071       Resp  2150-08-28 00:00:00  94002   \n",
-       "573144  573145       78892   175171       Resp  2125-06-11 00:00:00  94003   \n",
-       "573145  573146       78892   175171       Resp  2125-06-10 00:00:00  94003   \n",
-       "\n",
-       "        CPT_NUMBER CPT_SUFFIX  TICKET_ID_SEQ              SECTIONHEADER  \\\n",
-       "0          99232.0        NaN            6.0  Evaluation and management   \n",
-       "1          99232.0        NaN            7.0  Evaluation and management   \n",
-       "2          99232.0        NaN            8.0  Evaluation and management   \n",
-       "3          99232.0        NaN            9.0  Evaluation and management   \n",
-       "4          99223.0        NaN            1.0  Evaluation and management   \n",
-       "...            ...        ...            ...                        ...   \n",
-       "573141     94003.0        NaN            NaN                   Medicine   \n",
-       "573142     94003.0        NaN            NaN                   Medicine   \n",
-       "573143     94002.0        NaN            NaN                   Medicine   \n",
-       "573144     94003.0        NaN            NaN                   Medicine   \n",
-       "573145     94003.0        NaN            NaN                   Medicine   \n",
-       "\n",
-       "                   SUBSECTIONHEADER                     DESCRIPTION  \n",
-       "0       Hospital inpatient services                             NaN  \n",
-       "1       Hospital inpatient services                             NaN  \n",
-       "2       Hospital inpatient services                             NaN  \n",
-       "3       Hospital inpatient services                             NaN  \n",
-       "4       Hospital inpatient services                             NaN  \n",
-       "...                             ...                             ...  \n",
-       "573141                    Pulmonary  VENT MGMT;SUBSQ DAYS(INVASIVE)  \n",
-       "573142                    Pulmonary  VENT MGMT;SUBSQ DAYS(INVASIVE)  \n",
-       "573143                    Pulmonary   VENT MGMT, 1ST DAY (INVASIVE)  \n",
-       "573144                    Pulmonary  VENT MGMT;SUBSQ DAYS(INVASIVE)  \n",
-       "573145                    Pulmonary  VENT MGMT;SUBSQ DAYS(INVASIVE)  \n",
-       "\n",
-       "[573146 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dataset_dictionary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-ed6feec5c67a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdataset_dictionary\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CPTEVENTS'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'dataset_dictionary' is not defined"
+     ]
     }
    ],
    "source": [
