--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -7,7 +7,7 @@
     "# Basic Info\n",
     "#### (The project title, your names, e-mail addresses, UIDs.)\n",
     "\n",
-    "* Project title:\n",
+    "* Project title: Improving Healthcare using NLP\n",
     "\n",
     "**Team Member 1**\n",
     "* Name: Mike Sanders\n",
