--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -7,7 +7,7 @@
     "# Basic Info\n",
     "#### (The project title, your names, e-mail addresses, UIDs.)\n",
     "\n",
-    "* Project title:\n",
+    "* Project title: Improving healthcare billing using NLP\n",
     "\n",
     "**Team Member 1**\n",
     "* Name: Mike Sanders\n",
@@ -58,7 +58,8 @@
     "Here are a few questions that we would like to answer:\n",
     "\n",
     "* Can diagnosis or procedure codes be predicted from doctor's/patient notes?\n",
-    "* How well does our model perform compared to a benchmark?\n",
+    "* Are some codes harder to predict than others?\n",
+    "* Are some codes ignored? \n",
     "* Is it easier to predict procedure or diagnosis codes?\n",
     "\n",
     "**What would you like to learn and accomplish?**\n",
@@ -99,7 +100,7 @@
     "\n",
     "In a fee-for-service model, the patient's well-being is not aligned with the provider. This also applies to insurance companies since they can just adjust rates for increased utilization. As a result, healthcare costs have increased by a staggering amount in the past few decades. This increase is not necessarily due to insidious motives from the providers or payers, but rather a result of a system whose incentives are not aligned with the patients.\n",
     "\n",
-    "In contrast to a fee-for-service model, a value-based care model's incentives are aligned with the patient since the payers and providers contract together so that they benefit from increased patient wellness. In turn, the patient is aligned with a common goal of wellness with the provider and payer since they also want to reduce their own medical expenses and improve documentation. Granted, some patients are apathetic to their personal wellness and this is one way that patient's incentives might not be completely aligned with the provider and payer.\n",
+    "A value-based care model can incentivize payers and providers to align with  patient wellness, but all stakeholders must have a voice.  A Natural language method of predicting billing codes can provide each stakeholder with an interactive voice in medical billing.  Physicians and providers can improve billing accuracy and completeness as well as documentation.  Patients, with a real-time interaction with medical billing codes, can take a larger role in billing accuracy and procedure value, while taking a more active role in personal wellness.  Payers (insurance, government) get more accurate feedback, from both provider and patient, increasing efficiency and reducing liability.  This makes the overall system more sustainable and profitable, but it does take the power away from providers and payers, which at the moment, have nearly exclusive control of medical billing.  This could reduce the need for Hospital coders and ultimately lead to smaller insurance systems and hospitals.  Reduction in fraud, waste and abuse would hurt those who benefit from fraud, waste or abuse.\n",
     "\n",
     "**Is the data you collected biased or unbiased?**\n",
     "\n",
@@ -115,7 +116,9 @@
    "metadata": {},
    "source": [
     "# Data Processing. \n",
-    "#### Do you expect to do substantial data cleanup or data extraction? What quantities do you plan to derive from your data? How will data processing be implemented?\n"
+    "#### Do you expect to do substantial data cleanup or data extraction? What quantities do you plan to derive from your data? How will data processing be implemented?\n",
+    "\n",
+    "Data consist of tables in CSV format.  Tables need to be combined to have discharge notes and codes together.  Multiple records of single incident need to be combined to single record.   Text of notes need to be processed to remove erroneous and useless chatter like dates and places, separated into phrases, changed to lowercase, stop words removed and vectorized for use in a model.  Codes and notes have a many-to-many relationship.  Codes either need to be clustered or reduced to make it possible to train a model.  We will also use dimensional reduction of words using Unified Medical Language System."
    ]
   },
   {
@@ -123,7 +126,14 @@
    "metadata": {},
    "source": [
     "# Exploratory Analysis. \n",
-    "#### Which methods and visualizations are you planning to use to look at your dataset?\n"
+    "#### Which methods and visualizations are you planning to use to look at your dataset?\n",
+    "\n",
+    "* Histograms of word type compared to clusters of billing codes\n",
+    "* Histograms of codes\n",
+    "    * Common types of words do Radiology codes have versus oncology codes \n",
+    "* Compare stop words percentage to date and patient, using line chart \n",
+    "* Chart of code usage compared to time and patient\n",
+    "* Chart unique words by date and patient"
    ]
   },
   {
@@ -131,7 +141,9 @@
    "metadata": {},
    "source": [
     "# Analysis Methodology. \n",
-    "#### How are you planning to analyze your data?\n"
+    "#### How are you planning to analyze your data?\n",
+    "\n",
+    "Cross-validation with data set aside for testing.  Also test created written text for code prediction."
    ]
   },
   {
@@ -179,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
