--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -134,8 +134,7 @@
     "* removing punctuation\n",
     "* removing stop words\n",
     "* vectorize words\n",
-    "* utilize the Unified Medical Language System to map words to medical terminology\n"
-    "\n",
+    "* utilize the Unified Medical Language System to map words to medical terminology\n",
     "We will also use the gzip and pandas libraries to load our data. We will load all of the files as dataframes into a dictionary and use that dictionary as our main source for referencing our data from MIMIC. "
    ]
   },
