--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -135,6 +135,7 @@
     "* removing stop words\n",
     "* vectorize words\n",
     "* utilize the Unified Medical Language System to map words to medical terminology\n",
+    "* balance data to have uniform classes   \n",
     "We will also use the gzip and pandas libraries to load our data. We will load all of the files as dataframes into a dictionary and use that dictionary as our main source for referencing our data from MIMIC. "
    ]
   },
@@ -145,9 +146,8 @@
     "# Exploratory Analysis. \n",
     "#### Which methods and visualizations are you planning to use to look at your dataset?\n",
     "\n",
-    "* Histograms of word type compared to clusters of billing codes\n",
-    "* Histograms of codes\n",
-    "    * Common types of words do Radiology codes have versus oncology codes \n",
+    "* Histograms of word frequency for code class\n",
+    "    * For example types of words radiology codes have compared to oncology codes \n",
     "* Compare stop words percentage to date and patient, using line chart \n",
     "* Chart of code usage compared to time and patient\n",
     "* Chart unique words by date and patient"
@@ -160,7 +160,9 @@
     "# Analysis Methodology. \n",
     "#### How are you planning to analyze your data?\n",
     "\n",
-    "Cross-validation with data set aside for testing.  Also test created written text for code prediction."
+    "First, we will preprocess the data based on the instructions that we put in the data processing section. Then we will split the data into test and training and use cross validation and k-fold to improve the reliability of our results. We will use naive bayes, logistic regression, and a few other supervised learning methods to train our model. We will also use one deep learning method to train our model and see how that compares to the supervised model. We will then use hyperparameter tuning on our model. We will use grid search to find the optimal parameters for our model to improve performance. Finally, we will use ROC, as well as the F-score, accuracy, precision, and recall to evaluate our models. \n",
+    "\n",
+    "This will result in a model where we can input free text and get a prediction for a CPT or ICD code in return.\n"
    ]
   },
   {
